fix xs tab align issue related to participantCount float

--- a/css/conversationView.scss
+++ b/css/conversationView.scss
@@ -320,7 +320,7 @@ svg {
   margin: 20px;
 }
 .participationCount {
-  float: right;
+  // float: right;
 }
 
 #carousel {
